# aruco

./: CMakeLists.txt  README.md  calibrator.py  charucoboard.py  gen_marker.py  simpleimage.py
cpp/: CMakeLists.txt  calibrator.cpp
py/: detector.py
